<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/complete_now"
        android:textColor="@color/titleTextColor"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/single_card_background"
        android:orientation="vertical"
        android:padding="14dp">

        <ImageView
            android:id="@+id/image"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:contentDescription="@string/imagecontent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_community"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:text="@string/challenge_for_you"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>