<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.QuestionFragment">

        <LinearLayout
            android:id="@+id/progressBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackColor"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="14dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/you_started_a_1_day_streak_n_see_progress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/correctWrongBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBanner"
            android:background="@color/correctgreen"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/imagecontent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/correct" />

            <TextView
                android:id="@+id/bannerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/correct"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/correctWrongBanner"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/imagecontent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/quiz1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logic_warmups"
                    android:textAllCaps="true"
                    android:textColor="@color/darkGray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:lineHeight="25dp"
                    android:text="@string/logic_puzzles_intermediate_nwarmup"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp"
                    tools:targetApi="p" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/questionSection"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:lineHeight="28dp"
                android:text="@string/_1_jorge_runs_faster_than_drew_n2_drew_run_faster_than_bernard_n3_jorge_runs_faster_than_bernard"
                android:textColor="@color/titleTextColor"
                android:textSize="17sp"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/questionDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/ubuntu"
                android:lineHeight="28dp"
                android:text="@string/if_the_first_two_statements_are_true_then_the_third_statement_is"
                android:textColor="@color/titleTextColor"
                android:textSize="17sp"
                tools:targetApi="p" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/questionLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/img_1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/imagecontent"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/img_2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/imagecontent"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/img_3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/imagecontent"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    android:visibility="invisible" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blackColor"
                    android:elevation="5dp"
                    android:letterSpacing="0.05"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp"
                    android:text="True"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/blackColor"
                    android:letterSpacing="0.05"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/False"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:buttonTint="@color/blackColor"
                    android:letterSpacing="0.05"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/uncertain"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp" />


            </RadioGroup>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="6dp"
            android:background="@drawable/button_state"
            android:enabled="false"
            android:fontFamily="@font/ubuntu_medium"
            android:letterSpacing="0.05"
            android:text="@string/submit"
            android:visibility="visible"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="6dp"
            android:background="@drawable/button_state"
            android:enabled="true"
            android:fontFamily="@font/ubuntu_medium"
            android:letterSpacing="0.05"
            android:text="Continue"
            android:visibility="gone"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</ScrollView>

