<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/menuOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/home_topbar_backgorund"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/imagecontent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_menu_24"
                app:tint="@color/purpleTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/menu"
                android:textAllCaps="true"
                android:textColor="@color/purpleTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/completeOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/imagecontent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:tint="@color/blackColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/complete"
                android:textAllCaps="true"
                android:textColor="@color/blackColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exploreOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/imagecontent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_explore_24"
                app:tint="@color/blackColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/menu"
                android:textAllCaps="true"
                android:textColor="@color/blackColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/imagecontent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_feedback_24"
                app:tint="@color/blackColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/feedback"
                android:textAllCaps="true"
                android:textColor="@color/blackColor"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topBar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/dividerColor" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:layout_below="@id/divider"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/home_nav" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:menu="@menu/home_bottom_menu" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>